# smart_library

./: .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml
app/common/: error_handling.py  utils.py
app/database/: __init__.py  crud_base.py  database.py  utils.py
app/database/schemas/: saved_file.py  user.py
app/prompts/: chatbot.py
app/randoms/: logger.py
app/routes/: __init__.py  jwt_route.py  user.py
app/routes/schemas/: user.py
app/services/: authentication.py  database.py
